Use https://github.com/ngoduykhanh/PowerDNS-Admin and build args.

--- a/pdns-admin-static/Dockerfile
+++ b/pdns-admin-static/Dockerfile
@@ -3,8 +3,11 @@ MAINTAINER "Peter Schiffer" <pschiffe@redhat.com>
 
 RUN apk add --no-cache curl
 
+ARG PDNSADMIN_VERSION=master
+ARG PDNSADMIN_URL="https://github.com/ngoduykhanh/PowerDNS-Admin/archive/${PDNSADMIN_VERSION}.tar.gz"
+
 RUN mkdir -p /opt/powerdns-admin \
-  && curl -sSLk https://git.omicroninteractive.com/0x97/powerdns-admin/repository/archive.tar.gz?ref=master \
+  && curl -sSLk "${PDNSADMIN_URL}" \
     | tar -xzC /opt/powerdns-admin --strip 1 \
   && find /opt/powerdns-admin -path /opt/powerdns-admin/app/static -prune -o -type f -exec rm -f {} + \
   && chown -R root: /opt/powerdns-admin
